--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The conservative party in UK " />
   <title>The Conservative Party</title>
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -12,29 +12,123 @@
 
 <body>
   <!-- navigation -->
-  <nav>
-    <a href="constitution">constitution</a>
-    <a href="Mandate">Mandate</a>
-    <a href="Manifesto">Manifesto</a>
-  <header>
-         THE POLITICS OF THE CONSERVATIVE PARTY 
-  </header>
-<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT5bEPw5bFfDRelR08gIbxe1F_jq_shx-r_wqskybUYfozDTSXt">
-  <div>
-    <article>
-      <h2>Politics</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    </article>
-    <article>
-      <h2>Funding</h2>
-      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-      <a href="https://github.com/Code-Your-Future/html-css-project"> Click here for more info.</a>
-    </article>
-    <article>
-      <h2>Future</h2>
-      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
-    </article>
-    <footer>The conservative article by Anthony Thuo</footer>
+  <div id="wrapper">
+    <div class="main">
+      <img class="img" src="http://www.helpwithtalking.com/userfiles/torries.jpg" />
+      <nav>
+        <a href="Constitution">Constitution</a>
+        <a href="Mandate">Mandate</a>
+        <a href="Manifesto">Manifesto</a>
+      </nav>
+
+      <header>
+        THE POLITICS OF THE CONSERVATIVE PARTY
+      </header>
+    </div>
+    <div class="main-container">
+
+
+      <article class="part">
+        <h2>POLITICS</h2>
+        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRHvX5J0a6dRuY--Sr8tNJDJ9wY_1SkOZPHdEtyoDgLHmiB7mRk" width="300px">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
+          dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+          specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+          essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+          passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        <a href="https://www.google.co.uk/search?q=conservative+party&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjNu7jZtuPTAhULLsAKHYi4DTwQ_AUICygC&biw=1438&bih=651#spf=1">The young upcoming mps.</a>
+      </article>
+
+
+      <article class="part">
+        <h3>FUNDING</h3>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_Pu8HmvzslQ1gQ4NuzU4dgGLziwfeR-S8vpn8psINvqsb0zHcBA" width="100px">
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at
+          its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed
+          to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and
+          web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many
+          web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes
+          on purpose (injected humour and the like).</p><a href="https://github.com/Code-Your-Future/html-css-project"> Click here for more info.</a>
+      </article>
+
+
+      <article class="part">
+        <h4>THE FUTURE</h4><img src="http://img.huffingtonpost.com/asset/scalefit_630_noupscale/577be36e19000024002195aa.jpeg"
+          width="300px">
+
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+          form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use
+          a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All
+          the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first
+          true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
+          sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
+          free from repetition, injected humour, or non-characteristic words etc.</p><a href="http://www.independent.co.uk/voices/eu-referendum-brexit-win-or-lose-what-will-happen-to-david-cameron-conservative-party-a7091226.html">The Brexit Question.</a>
+      </article>
+
+    </div>
+    <div class="container2">
+
+      <article class="part">
+        <h5>GENERAL ELECTION</h5>
+        <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+          text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+          book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+          unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+          and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </article>
+
+
+      <article class="part">
+        <h6>MANIFESTO</h6>
+        <p>um is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+          text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+          book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+          unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+          and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+      </article>
+
+      <article class="part">
+        <h7>EDUCATION</h7>
+        <p>um is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+          text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+          book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+          unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+          and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+
+      </article>
+    </div>
+    <div class="side-bar">
+      <img src="http://cdn.static-economist.com/sites/default/files/20151010_BRD001_0.jpg" width="200px" />
+      <form action="/signup" method="POST">
+        <p>
+          <label>First name</label>
+          <input type="text" >
+        </p>
+        <p>
+          <label>Last name</label>
+          <input type="text"> 
+        </p>
+        <p>
+          <label>Email</label>
+          <input type="email"> 
+        </p>
+        <p>
+          <label>Phone number</label>
+          <input type="tel"> 
+        </p>
+        <p>
+          <button>Submit</button>
+        </p>
+      </form>
+
+    </div>
+    <footer>
+
+
+      <footer>The conservative article by Anthony Thuo</footer>
+
+
+    </footer>
   </div>
 </body>
 
