fixed my sidebar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
   <!-- navigation -->
-  <div id="wrapper">
-    <div class="main">
+  <div class="main">
       <img class="img" src="http://www.helpwithtalking.com/userfiles/torries.jpg" />
       <nav>
         <a href="Constitution">Constitution</a>
@@ -25,6 +24,8 @@
         THE POLITICS OF THE CONSERVATIVE PARTY
       </header>
     </div>
+  <div id="wrapper">
+    <div class="flex-wrapper">
     <div class="main-container">
 
 
@@ -97,6 +98,7 @@
 
       </article>
     </div>
+    </div>
     <div class="side-bar">
       <img src="http://cdn.static-economist.com/sites/default/files/20151010_BRD001_0.jpg" width="200px" />
       <form action="/signup" method="POST">
@@ -122,14 +124,10 @@
       </form>
 
     </div>
-    <footer>
-
-
+    
+      
+      </div>
       <footer>The conservative article by Anthony Thuo</footer>
-
-
-    </footer>
-  </div>
 </body>
 
 </html>
